# aioplate

./: .flake8  .gitignore  DOCS.md  LICENCE  Makefile  README.md  __main__.py  alembic.ini  app.ini.example  app.service  pyproject.toml  requirements.txt
.github/workflows/: code.yml  linter_types.yml  pylint.yml
app/: __main__.py
app/core/: templates.py
app/core/handlers/: factory.py
app/core/handlers/private_chat/: base.py  new_user.py
app/core/keyboards/: reply.py
app/core/messages/: new_user.py
app/core/messages/private_chat/: base.py  new_user.py
app/core/middlewares/: __init__.py  db.py  i18n.py  throttling.py
app/core/navigations/: command.py  reply.py
app/core/updates/: worker.py
app/dtos/: converters.py  user.py
app/exceptions/: handler.py
app/models/: database.py  dto.py  user.py
app/services/database/: connector.py
app/services/database/dao/: base.py  holder.py  mapper.py  user.py
app/settings/: config.py  paths.py
app/templates/: en.ftl  ru.ftl
migrations/: env.py
migrations/versions/: README
