[tool.poetry]
name = "Aioplate"
version = "0.0"
description = "Telegram Bot template"
authors = ["Andrey Karchevsky <karych@karych.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "==2.24"
asyncpg = "^0.26.0"
sqlalchemy = "==2.0"
alembic = "==1.9.2"
tzlocal = "^4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"