[tool.poetry]
name = "Aioplate"
version = "0.0"
description = "Telegram Bot template"
authors = ["Andrey Karchevsky <karych@karych.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "==3.0.0rc1"
asyncpg = "==0.28.0"
sqlalchemy = "==2.0.19"
alembic = "==1.11.2"
fluentogram = "==1.1.6"
tzlocal = "==5.0.1"
greenlet = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"